# claudechic

./: .gitignore  CLAUDE.md  IMPLEMENTATION_REPORT.md  PHASE_1_CHECKLIST.md  RUST_IMPLEMENTATION_SUMMARY.md  RUST_REWRITE_INDEX.md  RUST_REWRITE_PLAN.md  app.py  mkdocs.yml  pyproject.toml  styles.tcss
.ai-docs/: analytics.md
.github/workflows/: release.yml
cc_textual/: app.py  formatting.py  styles.tcss
claude_alamode/: __main__.py  agent.py  app.py  styles.tcss
claude_alamode/features/worktree/: __init__.py  commands.py  git.py
claude_alamode/widgets/: agents.py  chat.py  diff.py  tools.py
claudechic/: __main__.py  agent.py  agent_manager.py  analytics.py  app.py  checkpoints.py  commands.py  config.py  enums.py  help_data.py  mcp.py  messages.py  permissions.py  processes.py  profiling.py  protocols.py  remote.py  sessions.py  styles.tcss  theme.py
claudechic-rust/: .rustfmt.toml  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  FILE_MANIFEST.md  IMPLEMENTATION_STATUS.md  QUICKSTART.md  README.md
claudechic-rust/.cargo/: config.toml
claudechic-rust/claudechic-core/: Cargo.toml
claudechic-rust/claudechic-core/src/: config.rs  error.rs  lib.rs
claudechic-rust/claudechic-core/src/models/: agent.rs  events.rs  message.rs  mod.rs  permission.rs  tools.rs
claudechic-rust/claudechic-tui/: Cargo.toml
claudechic-rust/claudechic-tui/src/: app.rs  main.rs  terminal.rs
claudechic-rust/claudechic-tui/src/ui/: theme.rs
claudechic-rust/claudechic-tui/src/widgets/: chat_message.rs  mod.rs
claudechic/features/diff/: __init__.py  git.py  widgets.py
claudechic/features/worktree/: commands.py  git.py
claudechic/screens/: __init__.py  diff.py  rewind.py
claudechic/widgets/: __init__.py  agents.py  chat.py  chat_view.py  footer.py  indicators.py  process_modal.py  processes.py  profile_modal.py  prompts.py  scroll.py  tools.py
claudechic/widgets/base/: __init__.py  tool_base.py
claudechic/widgets/content/: diff.py  message.py  tools.py
claudechic/widgets/input/: autocomplete.py  history_search.py  vi_mode.py
claudechic/widgets/layout/: __init__.py  chat_view.py  footer.py  indicators.py  sidebar.py
docs/: agents.md  asciinema.md  features.md  privacy.md
tests/: conftest.py  test_app.py  test_app_ui.py  test_autocomplete.py  test_diff.py  test_mcp_ask_agent.py  test_widgets.py
