[workspace]
members = [
    "claudechic-core",
    "claudechic-tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Claude Chic Team"]
license = "MIT"
repository = "https://github.com/mrocklin/claudechic"

[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
ratatui = { version = "0.28", features = ["serde"] }
crossterm = { version = "0.29", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.20"
futures = "0.3"
async-trait = "0.1"
sqlx = { version = "0.8", features = ["postgres", "uuid", "json", "chrono"] }
git2 = "0.18"
regex = "1.10"
