[package]
name = "claudechic-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
git2 = { workspace = true }
regex = { workspace = true }
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
